--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "project-weather-app",
+  "homepage": "http://shermansjliu.github.io/project-weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +21,9 @@
     "start": "npm run watch:css & react-scripts start",
     "build": "npm run build:css react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +43,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "babel-plugin-macros": "^2.8.0",
+    "gh-pages": "^3.1.0",
     "postcss-cli": "^7.1.2",
     "tailwindcss": "^1.7.6",
     "twin.macro": "^1.8.0"
