--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+
+  "homepage": "https://shermansjliu.github.io/weather-app",
+
   "name": "project-weather-app",
-  "homepage": "http://shermansjliu.github.io/project-weather-app",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +22,7 @@
     "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
     "watch:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
     "start": "npm run watch:css & react-scripts start",
-    "build": "npm run build:css react-scripts build",
+    "build": "npm run build:css & react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
